# JawEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE.txt  README.md  todo.txt
TestApp/: CMakeLists.txt  TestApp.cpp  TestApp.h
engine/: CMakeLists.txt  JawEngine.h  d2d.cpp  d2d.h  engine.cpp  engine.h  graphics.cpp  graphics.h  input.cpp  input.h  window.cpp  window.h
jawengine/: CMakeLists.txt  JawEngine.h  asset.h  d2d.cpp  d2d.h  draw.h  dsound.cpp  dsound.h  engine.cpp  engine.h  graphics.h  input.cpp  input.h  internal_asset.h  internal_input.h  internal_state.h  slot_allocator.h  sound.h  sprite.cpp  sprite.h  state.cpp  state.h  structs.h  types.h  utils.h  win32.cpp  win32_asset.cpp  win32_d2d.cpp  win32_engine.cpp  win32_internal.h  win32_internal_draw.h  win32_internal_win.h  win32_win.cpp  window.cpp  window.h  windraw_internal.h  winvkc.h
jawengine/common/: avx2.cpp  avx2.h  input.cpp  internal_asset.h  internal_engine.h  internal_input.h  internal_sound.h  internal_sprite.h  internal_state.h  internal_utils.h  noavx2.cpp  slots.h  sprite.cpp  state.cpp  utils.cpp
jawengine/headers/: draw.h  sound.h  utils.h  winvkc.h
jawengine/libs/: profile.h  ui.h
jawengine/source/common/: avx2.cpp  avx2.h  input.cpp  internal_input.h  internal_sound.h  internal_sprite.h  internal_state.h  internal_utils.h  noavx2.cpp  sprite.cpp  state.cpp  synth.cpp
jawengine/source/windows/: win32_asset.cpp  win32_d2d.cpp  win32_dinput.cpp  win32_engine.cpp  win32_internal_dinput.h  win32_internal_draw.h  win32_internal_win.h  win32_utils.cpp  win32_xaudio.cpp
jawengine/windows/: win32_asset.cpp  win32_d2d.cpp  win32_dinput.cpp  win32_engine.cpp  win32_internal_dinput.h  win32_internal_draw.h  win32_internal_win.h  win32_utils.cpp  win32_win.cpp  win32_xaudio.cpp
