add_executable(TestApp "TestApp.cpp")
# target_link_options(TestApp PRIVATE /MAP)
target_link_libraries(TestApp jawengine)
set_property(TARGET TestApp PROPERTY CXX_STANDARD 20)

if(REQUIRE_AVX2)
	message("TestApp REQUIRE_AVX2 ON")
	if(MSVC)
		target_compile_options(TestApp PRIVATE /arch:AVX2)
	else()
		target_compile_options(TestApp PRIVATE -mavx2)
	endif()
endif()

if(NSPRITE)
	message("TestApp NSPRITE ON")
	if(MSVC)
		target_compile_options(TestApp PRIVATE /DJAW_NSPRITE)
	else()
		target_compile_options(TestApp PRIVATE -DJAW_NSPRITE)
	endif()
endif()

if(NSOUND)
	message("TestApp NSOUND ON")
	if(MSVC)
		target_compile_options(TestApp PRIVATE /DJAW_NSOUND)
	else()
		target_compile_options(TestApp PRIVATE -DJAW_NSOUND)
	endif()
endif()

if(NINPUT)
	message("TestApp NINPUT ON")
	if(MSVC)
		target_compile_options(TestApp PRIVATE /DJAW_NINPUT)
	else()
		target_compile_options(TestApp PRIVATE -DJAW_NINPUT)
	endif()
endif()

if(NSTATE)
	message("TestApp NSTATE ON")
	if(MSVC)
		target_compile_options(TestApp PRIVATE /DJAW_NSTATE)
	else()
		target_compile_options(TestApp PRIVATE -DJAW_NSTATE)
	endif()
endif()