add_executable(TestApp "TestApp.cpp")
# target_link_options(TestApp PRIVATE /MAP)
target_link_libraries(TestApp jawengine)
set_property(TARGET TestApp PROPERTY CXX_STANDARD 20)

# Set the entry point to the custom engine entry which checks for AVX2 compat
if(MSVC)
    target_link_options(TestApp PRIVATE "/ENTRY:jaw_entry")
else()
    target_link_options(TestApp PRIVATE "-Wl,-e,jaw_entry")
endif()

if(REQUIRE_AVX2)
	message("TestApp REQUIRE_AVX2 ON")
	if(MSVC)
		target_compile_options(TestApp PRIVATE /arch:AVX2 /DJAW_REQUIRE_AVX2)
	else()
		target_compile_options(TestApp PRIVATE -mavx2 -DJAW_REQUIRE_AVX2)
	endif()
endif()

if(NSPRITE)
	message("TestApp NSPRITE ON")
	if(MSVC)
		target_compile_options(TestApp PRIVATE /DJAW_NSPRITE)
	else()
		target_compile_options(TestApp PRIVATE -DJAW_NSPRITE)
	endif()
endif()

if(NSOUND)
	message("TestApp NSOUND ON")
	if(MSVC)
		target_compile_options(TestApp PRIVATE /DJAW_NSOUND)
	else()
		target_compile_options(TestApp PRIVATE -DJAW_NSOUND)
	endif()
endif()

if(NINPUT)
	message("TestApp NINPUT ON")
	if(MSVC)
		target_compile_options(TestApp PRIVATE /DJAW_NINPUT)
	else()
		target_compile_options(TestApp PRIVATE -DJAW_NINPUT)
	endif()
endif()

if(NSTATE)
	message("TestApp NSTATE ON")
	if(MSVC)
		target_compile_options(TestApp PRIVATE /DJAW_NSTATE)
	else()
		target_compile_options(TestApp PRIVATE -DJAW_NSTATE)
	endif()
endif()